Bug 164456 - Doesn't allow to view/save backtrace without debug symbols.
Summary: Doesn't allow to view/save backtrace without debug symbols.
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-19 17:28 UTC by FiNeX
Modified: 2008-06-19 21:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2008-06-19 17:28:23 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Are backtrace without "debug symbols" useful? If not them should't be available to users which post them here on b.k.o.
Comment 1 Urs Wolfer 2008-06-19 20:13:56 UTC
They are of course not useful. Good point to fix in DrKonqi.
Comment 2 FiNeX 2008-06-19 21:44:08 UTC
SVN commit 822305 by finex:

Messagebox added to inform that the backtrace could be unuseful.

BUG: 164456



 M  +5 -0      debugger.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=822305