Messagebox added to inform that the backtrace could be unuseful.

BUG: 164456


svn path=/trunk/KDE/kdebase/runtime/; revision=822305